--- a/hwk.html
+++ b/hwk.html
@@ -7,6 +7,8 @@
     <title>This is the first day homework</title>
 </head>
 <body>
-    
+    <h1>This is content</h1>
+
+    <p>This is content enclosed in a paragraph tag</p>
 </body>
 </html>
